[gd_scene load_steps=2 format=3 uid="uid://4fn2nqs14tjm"]

[ext_resource type="Script" uid="uid://mgmdhwbtmmds" path="res://scripts/control_hints.gd" id="1_c6g4n"]

[node name="ControlHints" type="Node2D"]
script = ExtResource("1_c6g4n")

[node name="LabelRight" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="LabelLeft" type="Label" parent="."]
offset_left = -40.0
offset_top = 34.0
offset_bottom = 57.0

[node name="LabelTop" type="Label" parent="."]
offset_left = 64.0
offset_top = 29.0
offset_right = 104.0
offset_bottom = 52.0

[node name="LabelBottom" type="Label" parent="."]
offset_top = 67.0
offset_right = 40.0
offset_bottom = 90.0
